assets/style/theme.sass
html
  @apply leading-7

body
  @apply text-gray-700 font-normal subpixel-antialiased

h1,
h2,
h3,
h4,
h5,
h6
  @apply text-gray-800 tracking-tighter

.app-link 
  &:hover
    color: $link-color
  @apply cursor-pointer transition duration-100

.app-dot-divider
  @apply rounded-full w-1 h-1 bg-gray-300

/* AOS animation */
[data-aos='zoom-y-in']
  transition-property: transform, opacity
  @apply opacity-0 transform scale-x-95

[data-aos='zoom-y-out']
  transition-property: transform, opacity
  @apply opacity-0 transform scale-x-105

[data-aos='fade-in-left']
  transition-property: transform, opacity 
  @apply opacity-0 transform translate-x-4

[data-aos='fade-in-right']
  transition-property: transform, opacity 
  @apply opacity-0 transform -translate-x-4

[data-aos='fade-in-down']
  transition-property: transform, opacity 
  @apply opacity-0 transform -translate-y-4

[data-aos='fade-in-up']
  transition-property: transform, opacity 
  @apply opacity-0 transform translate-y-4 

